--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,7 +18,10 @@
 	font-family : century gothic;
 	font-size : 16px;
 }
-</string>
+
+QPushButton { color: red ;}
+QComboBox { color: red ;}
+QLineEdit { color: red ;}</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QFrame" name="frame">
