--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,7 +19,11 @@
 	font-size : 16px;
 }
 
-QPushButton { color: red ;}
+QPushButton 
+{ 
+	color: red ;
+	selection-background-color: darkgray;
+}
 QComboBox { color: red ;}
 QLineEdit { color: red ;}</string>
   </property>
@@ -287,9 +291,9 @@ subcontrol-origin: margin;
       <widget class="QPushButton" name="pb_supprimer">
        <property name="geometry">
         <rect>
-         <x>740</x>
+         <x>650</x>
          <y>530</y>
-         <width>151</width>
+         <width>121</width>
          <height>31</height>
         </rect>
        </property>
@@ -315,7 +319,7 @@ subcontrol-origin: margin;
         <rect>
          <x>380</x>
          <y>530</y>
-         <width>151</width>
+         <width>121</width>
          <height>31</height>
         </rect>
        </property>
@@ -329,14 +333,58 @@ subcontrol-origin: margin;
       <widget class="QPushButton" name="pushButton">
        <property name="geometry">
         <rect>
-         <x>560</x>
+         <x>520</x>
          <y>530</y>
-         <width>151</width>
+         <width>111</width>
          <height>31</height>
         </rect>
        </property>
        <property name="text">
         <string>PDF</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_3">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>510</y>
+         <width>93</width>
+         <height>28</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Facture</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>550</y>
+         <width>93</width>
+         <height>28</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Stat</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="le_supprimer">
+       <property name="geometry">
+        <rect>
+         <x>780</x>
+         <y>530</y>
+         <width>121</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">     border: 2px solid gray;
+     border-radius: 10px;
+     padding: 0 8px;
+     background:rgb(255, 255, 255);
+     selection-background-color: darkgray;
+ </string>
        </property>
       </widget>
      </widget>
