--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -65,7 +65,7 @@
       <string>Cin</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit">
+    <widget class="QLineEdit" name="le_nom">
      <property name="geometry">
       <rect>
        <x>140</x>
@@ -75,7 +75,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_2">
+    <widget class="QLineEdit" name="le_prenom">
      <property name="geometry">
       <rect>
        <x>140</x>
@@ -85,7 +85,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_3">
+    <widget class="QLineEdit" name="le_cin">
      <property name="geometry">
       <rect>
        <x>140</x>
@@ -95,7 +95,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_4">
+    <widget class="QLineEdit" name="le_num">
      <property name="geometry">
       <rect>
        <x>140</x>
@@ -105,7 +105,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_5">
+    <widget class="QLineEdit" name="le_adr">
      <property name="geometry">
       <rect>
        <x>140</x>
@@ -115,7 +115,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_6">
+    <widget class="QLineEdit" name="le_mail">
      <property name="geometry">
       <rect>
        <x>140</x>
@@ -125,21 +125,11 @@
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_7">
+    <widget class="QLineEdit" name="le_voiture">
      <property name="geometry">
       <rect>
        <x>140</x>
        <y>280</y>
-       <width>113</width>
-       <height>20</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEdit_8">
-     <property name="geometry">
-      <rect>
-       <x>140</x>
-       <y>320</y>
        <width>113</width>
        <height>20</height>
       </rect>
@@ -198,7 +188,7 @@
      </property>
     </widget>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="b_ajouter">
     <property name="geometry">
      <rect>
       <x>430</x>
